# game

./: .gitignore  DESIGN.md  README.en.md  README.md
枯羽与残火/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  setup.bat
枯羽与残火/scripts/: setup.ps1  setup.sh  setup_windows.bat  一键启动.ps1
枯羽与残火/src/: main.c
枯羽与残火/src/combat/: combat.c  combat_api.h  说明.md
枯羽与残火/src/core/: core.c  core_api.h  说明.md
枯羽与残火/src/enemy/: enemy.c  enemy_api.h  说明.md
枯羽与残火/src/level/: level.c  level_api.h  说明.md
枯羽与残火/src/player/: player.c  player_api.h  说明.md
枯羽与残火/src/render/: render.c  render_api.h  说明.md
枯羽与残火/src/types/: types.h
